update pom to handle errors in build and update .gitignore